add new project Videos

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: My projects
+title: Pwntales - My projects
 description: I'm working on something? Here's a list of my projects.
 image: '/images/portfolio/book.jpg'
 ---
